--- a/web3.html
+++ b/web3.html
@@ -19,7 +19,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#products">Products</a>
-            <a href="#review">Review</a>
+            <a href="#reviews">Review</a>
             <a href="#contact">Contact</a>
         </nav>
         <div class="icons">
